// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Amazon Review Default 1`] = `
<div
  className="facebook-container"
>
  <div
    style={
      Object {
        "fontFamily": "lato, arial, sans-serif",
        "fontSize": "14px",
      }
    }
  >
    <div
      className=" gatsby-image-wrapper"
      style={
        Object {
          "display": "inline-block",
          "height": 19,
          "overflow": "hidden",
          "position": "relative",
          "width": 20,
        }
      }
    >
      <img
        alt=""
        aria-hidden={true}
        src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABQAAAATCAYAAACQjC21AAAACXBIWXMAAAsSAAALEgHS3X78AAACPElEQVQ4y41UPU8cMRC93UNEwsNHkQjaKEkRiSICRJ02AgmB+B0UUbrkP6QjBV0QuhSUiAZ5+QifAUGTtBQUSJHSRQhyx655Mx4v3jsgrPTk8Xr85s3Y41rtjs9lJGNhTSpza8aACbX1H9Ue/bGzW+/hse4DmAbsXyEYSMugj/qKzERKzCvg0u2RwzipAeq69h9lnkhV6qaMvrh9kG0zIW2pX8JZSOB2pSLfp5AAqcCabq+UXhSsbl3Irt2OqHyngZ5wSQD2T8oyPFQLOM+7HyDJTAsbrjXtjXtLFUrgZoX4KfAamATmkM48Nl94daYAaYEAGDkANYAPmM8Cb0A0BJ+ukPJ74BQO57KZa3UAHAIlmZAwPCmvs3Iuwab4/AHOEPQzpzWAiXXHvbzQBHJNsXlLpgpvbV5vYcwx/hNyS6ewX8YnvKwLEZGkWFXoicO/ptwAa05g94euSCPSb5JqRnlbqncAhyQCzBHQp4dYD0RpdI2+uu+yIW9TF9URa95nG3ZvO1n1IlvTj8XfvtiUdxDaKIilEd3TVelvf7kpNP2w1DHebKmo2JzurtgzQV2lDaXhQ39mZsoXGp3hiVpCtCH1aul9bGqtP4XsQqYxaUj5o9wzS1dSx4Nw8vTXd43U7kqDNsIZVJ4z/ygEQlosHwMpPK0gyGhh6Tn8FuRA9vRSWzrUnq91pBzZP/WSr6Gl3nb2txmGz5J/ffBwWBr0fUxJ7JSo0mewWdF0pD4tXxQti+4Zx3wVGFGVcqg38UaA6SfLuosAAAAASUVORK5CYII="
        style={
          Object {
            "height": "100%",
            "left": 0,
            "objectFit": "cover",
            "objectPosition": "center",
            "opacity": 1,
            "position": "absolute",
            "top": 0,
            "transitionDelay": "500ms",
            "width": "100%",
          }
        }
      />
      <picture>
        <source
          srcSet="/static/15cf3f5b820b523c44b22fbadeb90e67/f7a9a/review_star.webp 1x,
/static/15cf3f5b820b523c44b22fbadeb90e67/c6edb/review_star.webp 1.5x,
/static/15cf3f5b820b523c44b22fbadeb90e67/44b89/review_star.webp 2x"
          type="image/webp"
        />
        <source
          srcSet="/static/15cf3f5b820b523c44b22fbadeb90e67/b22c5/review_star.png 1x,
/static/15cf3f5b820b523c44b22fbadeb90e67/a74cd/review_star.png 1.5x,
/static/15cf3f5b820b523c44b22fbadeb90e67/0efb1/review_star.png 2x"
        />
        <img
          alt="Review star"
          height={19}
          loading="lazy"
          onLoad={[Function]}
          src="/static/15cf3f5b820b523c44b22fbadeb90e67/b22c5/review_star.png"
          srcSet="/static/15cf3f5b820b523c44b22fbadeb90e67/b22c5/review_star.png 1x,
/static/15cf3f5b820b523c44b22fbadeb90e67/a74cd/review_star.png 1.5x,
/static/15cf3f5b820b523c44b22fbadeb90e67/0efb1/review_star.png 2x"
          style={
            Object {
              "height": "100%",
              "left": 0,
              "objectFit": "cover",
              "objectPosition": "center",
              "opacity": 0,
              "position": "absolute",
              "top": 0,
              "transition": "opacity 500ms",
              "width": "100%",
            }
          }
          width={20}
        />
      </picture>
      <noscript
        dangerouslySetInnerHTML={
          Object {
            "__html": "<picture><source type='image/webp' srcset=\\"/static/15cf3f5b820b523c44b22fbadeb90e67/f7a9a/review_star.webp 1x,
/static/15cf3f5b820b523c44b22fbadeb90e67/c6edb/review_star.webp 1.5x,
/static/15cf3f5b820b523c44b22fbadeb90e67/44b89/review_star.webp 2x\\" /><source srcset=\\"/static/15cf3f5b820b523c44b22fbadeb90e67/b22c5/review_star.png 1x,
/static/15cf3f5b820b523c44b22fbadeb90e67/a74cd/review_star.png 1.5x,
/static/15cf3f5b820b523c44b22fbadeb90e67/0efb1/review_star.png 2x\\" /><img loading=\\"lazy\\" width=\\"20\\" height=\\"19\\" srcset=\\"/static/15cf3f5b820b523c44b22fbadeb90e67/b22c5/review_star.png 1x,
/static/15cf3f5b820b523c44b22fbadeb90e67/a74cd/review_star.png 1.5x,
/static/15cf3f5b820b523c44b22fbadeb90e67/0efb1/review_star.png 2x\\" src=\\"/static/15cf3f5b820b523c44b22fbadeb90e67/b22c5/review_star.png\\" alt=\\"Review star\\" style=\\"position:absolute;top:0;left:0;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/></picture>",
          }
        }
      />
    </div>
    <div
      className=" gatsby-image-wrapper"
      style={
        Object {
          "display": "inline-block",
          "height": 19,
          "overflow": "hidden",
          "position": "relative",
          "width": 20,
        }
      }
    >
      <img
        alt=""
        aria-hidden={true}
        src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABQAAAATCAYAAACQjC21AAAACXBIWXMAAAsSAAALEgHS3X78AAACPElEQVQ4y41UPU8cMRC93UNEwsNHkQjaKEkRiSICRJ02AgmB+B0UUbrkP6QjBV0QuhSUiAZ5+QifAUGTtBQUSJHSRQhyx655Mx4v3jsgrPTk8Xr85s3Y41rtjs9lJGNhTSpza8aACbX1H9Ue/bGzW+/hse4DmAbsXyEYSMugj/qKzERKzCvg0u2RwzipAeq69h9lnkhV6qaMvrh9kG0zIW2pX8JZSOB2pSLfp5AAqcCabq+UXhSsbl3Irt2OqHyngZ5wSQD2T8oyPFQLOM+7HyDJTAsbrjXtjXtLFUrgZoX4KfAamATmkM48Nl94daYAaYEAGDkANYAPmM8Cb0A0BJ+ukPJ74BQO57KZa3UAHAIlmZAwPCmvs3Iuwab4/AHOEPQzpzWAiXXHvbzQBHJNsXlLpgpvbV5vYcwx/hNyS6ewX8YnvKwLEZGkWFXoicO/ptwAa05g94euSCPSb5JqRnlbqncAhyQCzBHQp4dYD0RpdI2+uu+yIW9TF9URa95nG3ZvO1n1IlvTj8XfvtiUdxDaKIilEd3TVelvf7kpNP2w1DHebKmo2JzurtgzQV2lDaXhQ39mZsoXGp3hiVpCtCH1aul9bGqtP4XsQqYxaUj5o9wzS1dSx4Nw8vTXd43U7kqDNsIZVJ4z/ygEQlosHwMpPK0gyGhh6Tn8FuRA9vRSWzrUnq91pBzZP/WSr6Gl3nb2txmGz5J/ffBwWBr0fUxJ7JSo0mewWdF0pD4tXxQti+4Zx3wVGFGVcqg38UaA6SfLuosAAAAASUVORK5CYII="
        style={
          Object {
            "height": "100%",
            "left": 0,
            "objectFit": "cover",
            "objectPosition": "center",
            "opacity": 1,
            "position": "absolute",
            "top": 0,
            "transitionDelay": "500ms",
            "width": "100%",
          }
        }
      />
      <picture>
        <source
          srcSet="/static/15cf3f5b820b523c44b22fbadeb90e67/f7a9a/review_star.webp 1x,
/static/15cf3f5b820b523c44b22fbadeb90e67/c6edb/review_star.webp 1.5x,
/static/15cf3f5b820b523c44b22fbadeb90e67/44b89/review_star.webp 2x"
          type="image/webp"
        />
        <source
          srcSet="/static/15cf3f5b820b523c44b22fbadeb90e67/b22c5/review_star.png 1x,
/static/15cf3f5b820b523c44b22fbadeb90e67/a74cd/review_star.png 1.5x,
/static/15cf3f5b820b523c44b22fbadeb90e67/0efb1/review_star.png 2x"
        />
        <img
          alt="Review star"
          height={19}
          loading="lazy"
          onLoad={[Function]}
          src="/static/15cf3f5b820b523c44b22fbadeb90e67/b22c5/review_star.png"
          srcSet="/static/15cf3f5b820b523c44b22fbadeb90e67/b22c5/review_star.png 1x,
/static/15cf3f5b820b523c44b22fbadeb90e67/a74cd/review_star.png 1.5x,
/static/15cf3f5b820b523c44b22fbadeb90e67/0efb1/review_star.png 2x"
          style={
            Object {
              "height": "100%",
              "left": 0,
              "objectFit": "cover",
              "objectPosition": "center",
              "opacity": 0,
              "position": "absolute",
              "top": 0,
              "transition": "opacity 500ms",
              "width": "100%",
            }
          }
          width={20}
        />
      </picture>
      <noscript
        dangerouslySetInnerHTML={
          Object {
            "__html": "<picture><source type='image/webp' srcset=\\"/static/15cf3f5b820b523c44b22fbadeb90e67/f7a9a/review_star.webp 1x,
/static/15cf3f5b820b523c44b22fbadeb90e67/c6edb/review_star.webp 1.5x,
/static/15cf3f5b820b523c44b22fbadeb90e67/44b89/review_star.webp 2x\\" /><source srcset=\\"/static/15cf3f5b820b523c44b22fbadeb90e67/b22c5/review_star.png 1x,
/static/15cf3f5b820b523c44b22fbadeb90e67/a74cd/review_star.png 1.5x,
/static/15cf3f5b820b523c44b22fbadeb90e67/0efb1/review_star.png 2x\\" /><img loading=\\"lazy\\" width=\\"20\\" height=\\"19\\" srcset=\\"/static/15cf3f5b820b523c44b22fbadeb90e67/b22c5/review_star.png 1x,
/static/15cf3f5b820b523c44b22fbadeb90e67/a74cd/review_star.png 1.5x,
/static/15cf3f5b820b523c44b22fbadeb90e67/0efb1/review_star.png 2x\\" src=\\"/static/15cf3f5b820b523c44b22fbadeb90e67/b22c5/review_star.png\\" alt=\\"Review star\\" style=\\"position:absolute;top:0;left:0;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/></picture>",
          }
        }
      />
    </div>
    <div
      className=" gatsby-image-wrapper"
      style={
        Object {
          "display": "inline-block",
          "height": 19,
          "overflow": "hidden",
          "position": "relative",
          "width": 20,
        }
      }
    >
      <img
        alt=""
        aria-hidden={true}
        src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABQAAAATCAYAAACQjC21AAAACXBIWXMAAAsSAAALEgHS3X78AAACPElEQVQ4y41UPU8cMRC93UNEwsNHkQjaKEkRiSICRJ02AgmB+B0UUbrkP6QjBV0QuhSUiAZ5+QifAUGTtBQUSJHSRQhyx655Mx4v3jsgrPTk8Xr85s3Y41rtjs9lJGNhTSpza8aACbX1H9Ue/bGzW+/hse4DmAbsXyEYSMugj/qKzERKzCvg0u2RwzipAeq69h9lnkhV6qaMvrh9kG0zIW2pX8JZSOB2pSLfp5AAqcCabq+UXhSsbl3Irt2OqHyngZ5wSQD2T8oyPFQLOM+7HyDJTAsbrjXtjXtLFUrgZoX4KfAamATmkM48Nl94daYAaYEAGDkANYAPmM8Cb0A0BJ+ukPJ74BQO57KZa3UAHAIlmZAwPCmvs3Iuwab4/AHOEPQzpzWAiXXHvbzQBHJNsXlLpgpvbV5vYcwx/hNyS6ewX8YnvKwLEZGkWFXoicO/ptwAa05g94euSCPSb5JqRnlbqncAhyQCzBHQp4dYD0RpdI2+uu+yIW9TF9URa95nG3ZvO1n1IlvTj8XfvtiUdxDaKIilEd3TVelvf7kpNP2w1DHebKmo2JzurtgzQV2lDaXhQ39mZsoXGp3hiVpCtCH1aul9bGqtP4XsQqYxaUj5o9wzS1dSx4Nw8vTXd43U7kqDNsIZVJ4z/ygEQlosHwMpPK0gyGhh6Tn8FuRA9vRSWzrUnq91pBzZP/WSr6Gl3nb2txmGz5J/ffBwWBr0fUxJ7JSo0mewWdF0pD4tXxQti+4Zx3wVGFGVcqg38UaA6SfLuosAAAAASUVORK5CYII="
        style={
          Object {
            "height": "100%",
            "left": 0,
            "objectFit": "cover",
            "objectPosition": "center",
            "opacity": 1,
            "position": "absolute",
            "top": 0,
            "transitionDelay": "500ms",
            "width": "100%",
          }
        }
      />
      <picture>
        <source
          srcSet="/static/15cf3f5b820b523c44b22fbadeb90e67/f7a9a/review_star.webp 1x,
/static/15cf3f5b820b523c44b22fbadeb90e67/c6edb/review_star.webp 1.5x,
/static/15cf3f5b820b523c44b22fbadeb90e67/44b89/review_star.webp 2x"
          type="image/webp"
        />
        <source
          srcSet="/static/15cf3f5b820b523c44b22fbadeb90e67/b22c5/review_star.png 1x,
/static/15cf3f5b820b523c44b22fbadeb90e67/a74cd/review_star.png 1.5x,
/static/15cf3f5b820b523c44b22fbadeb90e67/0efb1/review_star.png 2x"
        />
        <img
          alt="Review star"
          height={19}
          loading="lazy"
          onLoad={[Function]}
          src="/static/15cf3f5b820b523c44b22fbadeb90e67/b22c5/review_star.png"
          srcSet="/static/15cf3f5b820b523c44b22fbadeb90e67/b22c5/review_star.png 1x,
/static/15cf3f5b820b523c44b22fbadeb90e67/a74cd/review_star.png 1.5x,
/static/15cf3f5b820b523c44b22fbadeb90e67/0efb1/review_star.png 2x"
          style={
            Object {
              "height": "100%",
              "left": 0,
              "objectFit": "cover",
              "objectPosition": "center",
              "opacity": 0,
              "position": "absolute",
              "top": 0,
              "transition": "opacity 500ms",
              "width": "100%",
            }
          }
          width={20}
        />
      </picture>
      <noscript
        dangerouslySetInnerHTML={
          Object {
            "__html": "<picture><source type='image/webp' srcset=\\"/static/15cf3f5b820b523c44b22fbadeb90e67/f7a9a/review_star.webp 1x,
/static/15cf3f5b820b523c44b22fbadeb90e67/c6edb/review_star.webp 1.5x,
/static/15cf3f5b820b523c44b22fbadeb90e67/44b89/review_star.webp 2x\\" /><source srcset=\\"/static/15cf3f5b820b523c44b22fbadeb90e67/b22c5/review_star.png 1x,
/static/15cf3f5b820b523c44b22fbadeb90e67/a74cd/review_star.png 1.5x,
/static/15cf3f5b820b523c44b22fbadeb90e67/0efb1/review_star.png 2x\\" /><img loading=\\"lazy\\" width=\\"20\\" height=\\"19\\" srcset=\\"/static/15cf3f5b820b523c44b22fbadeb90e67/b22c5/review_star.png 1x,
/static/15cf3f5b820b523c44b22fbadeb90e67/a74cd/review_star.png 1.5x,
/static/15cf3f5b820b523c44b22fbadeb90e67/0efb1/review_star.png 2x\\" src=\\"/static/15cf3f5b820b523c44b22fbadeb90e67/b22c5/review_star.png\\" alt=\\"Review star\\" style=\\"position:absolute;top:0;left:0;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/></picture>",
          }
        }
      />
    </div>
      
    <div
      className=" gatsby-image-wrapper"
      style={
        Object {
          "display": "inline-block",
          "height": 30,
          "overflow": "hidden",
          "position": "relative",
          "width": 93,
        }
      }
    >
      <img
        alt=""
        aria-hidden={true}
        src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABQAAAAGCAYAAADDl76dAAAACXBIWXMAAAsSAAALEgHS3X78AAABiUlEQVQY02NgAAItLS0DbW1tRwd7e1Y9PT0dINtER0fHUFdXVxHI5wHK+xkaGooCxZXU1NRcgeISQKwA5FtNmjSJEagGpN8sKyuLgcHCwoIdqLldQ0PjBFBjDpDeDsSHgfiAurr6En19fQ9NTc09QPYiU1MTIKV2B8hvAOJZQDWrgHqqgfQ+ID4OMhTkOiktLc1+oMAaIJ6so6U5CejEGiC7Eqh7BlBjMVDNdKDLNqppaLooqajv0tLW9gbKzweKJwDpY0C5eiDdDuSHMABNlQdq3AXUuBAo0CAmr1miqKqdpaejVaCrrdmso6UBtEBzk4aG5gRgYLRaGWrsNtDXTQKqnwRyBFB/IlB/FZBfAfSpKygIGTwdLXgYGPRYfy93Vnk50yrgWr+VBAMK0GEBkf9X2tv+X2nV+X+FtRqI72xtKAiibe3s2FxcXVhcXV2ZGJSVlVG0/l5kaf1jvlnbj/mmE37MM6n4Ptck9+9C08rv80x7vs23iPkwz8blw1xLIZh6KUkpRmT9APF9cs4bmVUCAAAAAElFTkSuQmCC"
        style={
          Object {
            "height": "100%",
            "left": 0,
            "objectFit": "cover",
            "objectPosition": "center",
            "opacity": 1,
            "position": "absolute",
            "top": 0,
            "transitionDelay": "500ms",
            "width": "100%",
          }
        }
      />
      <picture>
        <source
          srcSet=""
        />
        <img
          alt="Amazon logo"
          height={30}
          loading="lazy"
          onLoad={[Function]}
          src=""
          srcSet=""
          style={
            Object {
              "height": "100%",
              "left": 0,
              "objectFit": "cover",
              "objectPosition": "center",
              "opacity": 0,
              "position": "absolute",
              "top": 0,
              "transition": "opacity 500ms",
              "width": "100%",
            }
          }
          width={93}
        />
      </picture>
      <noscript
        dangerouslySetInnerHTML={
          Object {
            "__html": "<picture><source srcset=\\"\\" /><img loading=\\"lazy\\" width=\\"93\\" height=\\"30\\" src=\\"\\" alt=\\"Amazon logo\\" style=\\"position:absolute;top:0;left:0;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/></picture>",
          }
        }
      />
    </div>
       Verified Purchase
  </div>
  <div
    style={
      Object {
        "borderBottom": "1px solid #CCC",
        "color": "#444",
        "fontSize": "1.1em",
        "fontWeight": "bold",
        "marginBottom": "5px",
      }
    }
  >
    A kind review
  </div>
  <div
    style={
      Object {
        "fontFamily": "lato, arial, sans-serif",
        "fontSize": "14px",
        "marginTop": "1em",
      }
    }
  >
    Some text describing what a great service we provided
  </div>
  <div>
    <center />
  </div>
</div>
`;

exports[`Storyshots Amazon Review With Action 1`] = `
<div
  className="facebook-container"
>
  <div
    style={
      Object {
        "fontFamily": "lato, arial, sans-serif",
        "fontSize": "14px",
      }
    }
  >
    <div
      className=" gatsby-image-wrapper"
      style={
        Object {
          "display": "inline-block",
          "height": 19,
          "overflow": "hidden",
          "position": "relative",
          "width": 20,
        }
      }
    >
      <img
        alt=""
        aria-hidden={true}
        src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABQAAAATCAYAAACQjC21AAAACXBIWXMAAAsSAAALEgHS3X78AAACPElEQVQ4y41UPU8cMRC93UNEwsNHkQjaKEkRiSICRJ02AgmB+B0UUbrkP6QjBV0QuhSUiAZ5+QifAUGTtBQUSJHSRQhyx655Mx4v3jsgrPTk8Xr85s3Y41rtjs9lJGNhTSpza8aACbX1H9Ue/bGzW+/hse4DmAbsXyEYSMugj/qKzERKzCvg0u2RwzipAeq69h9lnkhV6qaMvrh9kG0zIW2pX8JZSOB2pSLfp5AAqcCabq+UXhSsbl3Irt2OqHyngZ5wSQD2T8oyPFQLOM+7HyDJTAsbrjXtjXtLFUrgZoX4KfAamATmkM48Nl94daYAaYEAGDkANYAPmM8Cb0A0BJ+ukPJ74BQO57KZa3UAHAIlmZAwPCmvs3Iuwab4/AHOEPQzpzWAiXXHvbzQBHJNsXlLpgpvbV5vYcwx/hNyS6ewX8YnvKwLEZGkWFXoicO/ptwAa05g94euSCPSb5JqRnlbqncAhyQCzBHQp4dYD0RpdI2+uu+yIW9TF9URa95nG3ZvO1n1IlvTj8XfvtiUdxDaKIilEd3TVelvf7kpNP2w1DHebKmo2JzurtgzQV2lDaXhQ39mZsoXGp3hiVpCtCH1aul9bGqtP4XsQqYxaUj5o9wzS1dSx4Nw8vTXd43U7kqDNsIZVJ4z/ygEQlosHwMpPK0gyGhh6Tn8FuRA9vRSWzrUnq91pBzZP/WSr6Gl3nb2txmGz5J/ffBwWBr0fUxJ7JSo0mewWdF0pD4tXxQti+4Zx3wVGFGVcqg38UaA6SfLuosAAAAASUVORK5CYII="
        style={
          Object {
            "height": "100%",
            "left": 0,
            "objectFit": "cover",
            "objectPosition": "center",
            "opacity": 1,
            "position": "absolute",
            "top": 0,
            "transitionDelay": "500ms",
            "width": "100%",
          }
        }
      />
      <picture>
        <source
          srcSet="/static/15cf3f5b820b523c44b22fbadeb90e67/f7a9a/review_star.webp 1x,
/static/15cf3f5b820b523c44b22fbadeb90e67/c6edb/review_star.webp 1.5x,
/static/15cf3f5b820b523c44b22fbadeb90e67/44b89/review_star.webp 2x"
          type="image/webp"
        />
        <source
          srcSet="/static/15cf3f5b820b523c44b22fbadeb90e67/b22c5/review_star.png 1x,
/static/15cf3f5b820b523c44b22fbadeb90e67/a74cd/review_star.png 1.5x,
/static/15cf3f5b820b523c44b22fbadeb90e67/0efb1/review_star.png 2x"
        />
        <img
          alt="Review star"
          height={19}
          loading="lazy"
          onLoad={[Function]}
          src="/static/15cf3f5b820b523c44b22fbadeb90e67/b22c5/review_star.png"
          srcSet="/static/15cf3f5b820b523c44b22fbadeb90e67/b22c5/review_star.png 1x,
/static/15cf3f5b820b523c44b22fbadeb90e67/a74cd/review_star.png 1.5x,
/static/15cf3f5b820b523c44b22fbadeb90e67/0efb1/review_star.png 2x"
          style={
            Object {
              "height": "100%",
              "left": 0,
              "objectFit": "cover",
              "objectPosition": "center",
              "opacity": 0,
              "position": "absolute",
              "top": 0,
              "transition": "opacity 500ms",
              "width": "100%",
            }
          }
          width={20}
        />
      </picture>
      <noscript
        dangerouslySetInnerHTML={
          Object {
            "__html": "<picture><source type='image/webp' srcset=\\"/static/15cf3f5b820b523c44b22fbadeb90e67/f7a9a/review_star.webp 1x,
/static/15cf3f5b820b523c44b22fbadeb90e67/c6edb/review_star.webp 1.5x,
/static/15cf3f5b820b523c44b22fbadeb90e67/44b89/review_star.webp 2x\\" /><source srcset=\\"/static/15cf3f5b820b523c44b22fbadeb90e67/b22c5/review_star.png 1x,
/static/15cf3f5b820b523c44b22fbadeb90e67/a74cd/review_star.png 1.5x,
/static/15cf3f5b820b523c44b22fbadeb90e67/0efb1/review_star.png 2x\\" /><img loading=\\"lazy\\" width=\\"20\\" height=\\"19\\" srcset=\\"/static/15cf3f5b820b523c44b22fbadeb90e67/b22c5/review_star.png 1x,
/static/15cf3f5b820b523c44b22fbadeb90e67/a74cd/review_star.png 1.5x,
/static/15cf3f5b820b523c44b22fbadeb90e67/0efb1/review_star.png 2x\\" src=\\"/static/15cf3f5b820b523c44b22fbadeb90e67/b22c5/review_star.png\\" alt=\\"Review star\\" style=\\"position:absolute;top:0;left:0;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/></picture>",
          }
        }
      />
    </div>
    <div
      className=" gatsby-image-wrapper"
      style={
        Object {
          "display": "inline-block",
          "height": 19,
          "overflow": "hidden",
          "position": "relative",
          "width": 20,
        }
      }
    >
      <img
        alt=""
        aria-hidden={true}
        src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABQAAAATCAYAAACQjC21AAAACXBIWXMAAAsSAAALEgHS3X78AAACPElEQVQ4y41UPU8cMRC93UNEwsNHkQjaKEkRiSICRJ02AgmB+B0UUbrkP6QjBV0QuhSUiAZ5+QifAUGTtBQUSJHSRQhyx655Mx4v3jsgrPTk8Xr85s3Y41rtjs9lJGNhTSpza8aACbX1H9Ue/bGzW+/hse4DmAbsXyEYSMugj/qKzERKzCvg0u2RwzipAeq69h9lnkhV6qaMvrh9kG0zIW2pX8JZSOB2pSLfp5AAqcCabq+UXhSsbl3Irt2OqHyngZ5wSQD2T8oyPFQLOM+7HyDJTAsbrjXtjXtLFUrgZoX4KfAamATmkM48Nl94daYAaYEAGDkANYAPmM8Cb0A0BJ+ukPJ74BQO57KZa3UAHAIlmZAwPCmvs3Iuwab4/AHOEPQzpzWAiXXHvbzQBHJNsXlLpgpvbV5vYcwx/hNyS6ewX8YnvKwLEZGkWFXoicO/ptwAa05g94euSCPSb5JqRnlbqncAhyQCzBHQp4dYD0RpdI2+uu+yIW9TF9URa95nG3ZvO1n1IlvTj8XfvtiUdxDaKIilEd3TVelvf7kpNP2w1DHebKmo2JzurtgzQV2lDaXhQ39mZsoXGp3hiVpCtCH1aul9bGqtP4XsQqYxaUj5o9wzS1dSx4Nw8vTXd43U7kqDNsIZVJ4z/ygEQlosHwMpPK0gyGhh6Tn8FuRA9vRSWzrUnq91pBzZP/WSr6Gl3nb2txmGz5J/ffBwWBr0fUxJ7JSo0mewWdF0pD4tXxQti+4Zx3wVGFGVcqg38UaA6SfLuosAAAAASUVORK5CYII="
        style={
          Object {
            "height": "100%",
            "left": 0,
            "objectFit": "cover",
            "objectPosition": "center",
            "opacity": 1,
            "position": "absolute",
            "top": 0,
            "transitionDelay": "500ms",
            "width": "100%",
          }
        }
      />
      <picture>
        <source
          srcSet="/static/15cf3f5b820b523c44b22fbadeb90e67/f7a9a/review_star.webp 1x,
/static/15cf3f5b820b523c44b22fbadeb90e67/c6edb/review_star.webp 1.5x,
/static/15cf3f5b820b523c44b22fbadeb90e67/44b89/review_star.webp 2x"
          type="image/webp"
        />
        <source
          srcSet="/static/15cf3f5b820b523c44b22fbadeb90e67/b22c5/review_star.png 1x,
/static/15cf3f5b820b523c44b22fbadeb90e67/a74cd/review_star.png 1.5x,
/static/15cf3f5b820b523c44b22fbadeb90e67/0efb1/review_star.png 2x"
        />
        <img
          alt="Review star"
          height={19}
          loading="lazy"
          onLoad={[Function]}
          src="/static/15cf3f5b820b523c44b22fbadeb90e67/b22c5/review_star.png"
          srcSet="/static/15cf3f5b820b523c44b22fbadeb90e67/b22c5/review_star.png 1x,
/static/15cf3f5b820b523c44b22fbadeb90e67/a74cd/review_star.png 1.5x,
/static/15cf3f5b820b523c44b22fbadeb90e67/0efb1/review_star.png 2x"
          style={
            Object {
              "height": "100%",
              "left": 0,
              "objectFit": "cover",
              "objectPosition": "center",
              "opacity": 0,
              "position": "absolute",
              "top": 0,
              "transition": "opacity 500ms",
              "width": "100%",
            }
          }
          width={20}
        />
      </picture>
      <noscript
        dangerouslySetInnerHTML={
          Object {
            "__html": "<picture><source type='image/webp' srcset=\\"/static/15cf3f5b820b523c44b22fbadeb90e67/f7a9a/review_star.webp 1x,
/static/15cf3f5b820b523c44b22fbadeb90e67/c6edb/review_star.webp 1.5x,
/static/15cf3f5b820b523c44b22fbadeb90e67/44b89/review_star.webp 2x\\" /><source srcset=\\"/static/15cf3f5b820b523c44b22fbadeb90e67/b22c5/review_star.png 1x,
/static/15cf3f5b820b523c44b22fbadeb90e67/a74cd/review_star.png 1.5x,
/static/15cf3f5b820b523c44b22fbadeb90e67/0efb1/review_star.png 2x\\" /><img loading=\\"lazy\\" width=\\"20\\" height=\\"19\\" srcset=\\"/static/15cf3f5b820b523c44b22fbadeb90e67/b22c5/review_star.png 1x,
/static/15cf3f5b820b523c44b22fbadeb90e67/a74cd/review_star.png 1.5x,
/static/15cf3f5b820b523c44b22fbadeb90e67/0efb1/review_star.png 2x\\" src=\\"/static/15cf3f5b820b523c44b22fbadeb90e67/b22c5/review_star.png\\" alt=\\"Review star\\" style=\\"position:absolute;top:0;left:0;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/></picture>",
          }
        }
      />
    </div>
    <div
      className=" gatsby-image-wrapper"
      style={
        Object {
          "display": "inline-block",
          "height": 19,
          "overflow": "hidden",
          "position": "relative",
          "width": 20,
        }
      }
    >
      <img
        alt=""
        aria-hidden={true}
        src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABQAAAATCAYAAACQjC21AAAACXBIWXMAAAsSAAALEgHS3X78AAACPElEQVQ4y41UPU8cMRC93UNEwsNHkQjaKEkRiSICRJ02AgmB+B0UUbrkP6QjBV0QuhSUiAZ5+QifAUGTtBQUSJHSRQhyx655Mx4v3jsgrPTk8Xr85s3Y41rtjs9lJGNhTSpza8aACbX1H9Ue/bGzW+/hse4DmAbsXyEYSMugj/qKzERKzCvg0u2RwzipAeq69h9lnkhV6qaMvrh9kG0zIW2pX8JZSOB2pSLfp5AAqcCabq+UXhSsbl3Irt2OqHyngZ5wSQD2T8oyPFQLOM+7HyDJTAsbrjXtjXtLFUrgZoX4KfAamATmkM48Nl94daYAaYEAGDkANYAPmM8Cb0A0BJ+ukPJ74BQO57KZa3UAHAIlmZAwPCmvs3Iuwab4/AHOEPQzpzWAiXXHvbzQBHJNsXlLpgpvbV5vYcwx/hNyS6ewX8YnvKwLEZGkWFXoicO/ptwAa05g94euSCPSb5JqRnlbqncAhyQCzBHQp4dYD0RpdI2+uu+yIW9TF9URa95nG3ZvO1n1IlvTj8XfvtiUdxDaKIilEd3TVelvf7kpNP2w1DHebKmo2JzurtgzQV2lDaXhQ39mZsoXGp3hiVpCtCH1aul9bGqtP4XsQqYxaUj5o9wzS1dSx4Nw8vTXd43U7kqDNsIZVJ4z/ygEQlosHwMpPK0gyGhh6Tn8FuRA9vRSWzrUnq91pBzZP/WSr6Gl3nb2txmGz5J/ffBwWBr0fUxJ7JSo0mewWdF0pD4tXxQti+4Zx3wVGFGVcqg38UaA6SfLuosAAAAASUVORK5CYII="
        style={
          Object {
            "height": "100%",
            "left": 0,
            "objectFit": "cover",
            "objectPosition": "center",
            "opacity": 1,
            "position": "absolute",
            "top": 0,
            "transitionDelay": "500ms",
            "width": "100%",
          }
        }
      />
      <picture>
        <source
          srcSet="/static/15cf3f5b820b523c44b22fbadeb90e67/f7a9a/review_star.webp 1x,
/static/15cf3f5b820b523c44b22fbadeb90e67/c6edb/review_star.webp 1.5x,
/static/15cf3f5b820b523c44b22fbadeb90e67/44b89/review_star.webp 2x"
          type="image/webp"
        />
        <source
          srcSet="/static/15cf3f5b820b523c44b22fbadeb90e67/b22c5/review_star.png 1x,
/static/15cf3f5b820b523c44b22fbadeb90e67/a74cd/review_star.png 1.5x,
/static/15cf3f5b820b523c44b22fbadeb90e67/0efb1/review_star.png 2x"
        />
        <img
          alt="Review star"
          height={19}
          loading="lazy"
          onLoad={[Function]}
          src="/static/15cf3f5b820b523c44b22fbadeb90e67/b22c5/review_star.png"
          srcSet="/static/15cf3f5b820b523c44b22fbadeb90e67/b22c5/review_star.png 1x,
/static/15cf3f5b820b523c44b22fbadeb90e67/a74cd/review_star.png 1.5x,
/static/15cf3f5b820b523c44b22fbadeb90e67/0efb1/review_star.png 2x"
          style={
            Object {
              "height": "100%",
              "left": 0,
              "objectFit": "cover",
              "objectPosition": "center",
              "opacity": 0,
              "position": "absolute",
              "top": 0,
              "transition": "opacity 500ms",
              "width": "100%",
            }
          }
          width={20}
        />
      </picture>
      <noscript
        dangerouslySetInnerHTML={
          Object {
            "__html": "<picture><source type='image/webp' srcset=\\"/static/15cf3f5b820b523c44b22fbadeb90e67/f7a9a/review_star.webp 1x,
/static/15cf3f5b820b523c44b22fbadeb90e67/c6edb/review_star.webp 1.5x,
/static/15cf3f5b820b523c44b22fbadeb90e67/44b89/review_star.webp 2x\\" /><source srcset=\\"/static/15cf3f5b820b523c44b22fbadeb90e67/b22c5/review_star.png 1x,
/static/15cf3f5b820b523c44b22fbadeb90e67/a74cd/review_star.png 1.5x,
/static/15cf3f5b820b523c44b22fbadeb90e67/0efb1/review_star.png 2x\\" /><img loading=\\"lazy\\" width=\\"20\\" height=\\"19\\" srcset=\\"/static/15cf3f5b820b523c44b22fbadeb90e67/b22c5/review_star.png 1x,
/static/15cf3f5b820b523c44b22fbadeb90e67/a74cd/review_star.png 1.5x,
/static/15cf3f5b820b523c44b22fbadeb90e67/0efb1/review_star.png 2x\\" src=\\"/static/15cf3f5b820b523c44b22fbadeb90e67/b22c5/review_star.png\\" alt=\\"Review star\\" style=\\"position:absolute;top:0;left:0;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/></picture>",
          }
        }
      />
    </div>
      
    <div
      className=" gatsby-image-wrapper"
      style={
        Object {
          "display": "inline-block",
          "height": 30,
          "overflow": "hidden",
          "position": "relative",
          "width": 93,
        }
      }
    >
      <img
        alt=""
        aria-hidden={true}
        src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABQAAAAGCAYAAADDl76dAAAACXBIWXMAAAsSAAALEgHS3X78AAABiUlEQVQY02NgAAItLS0DbW1tRwd7e1Y9PT0dINtER0fHUFdXVxHI5wHK+xkaGooCxZXU1NRcgeISQKwA5FtNmjSJEagGpN8sKyuLgcHCwoIdqLldQ0PjBFBjDpDeDsSHgfiAurr6En19fQ9NTc09QPYiU1MTIKV2B8hvAOJZQDWrgHqqgfQ+ID4OMhTkOiktLc1+oMAaIJ6so6U5CejEGiC7Eqh7BlBjMVDNdKDLNqppaLooqajv0tLW9gbKzweKJwDpY0C5eiDdDuSHMABNlQdq3AXUuBAo0CAmr1miqKqdpaejVaCrrdmso6UBtEBzk4aG5gRgYLRaGWrsNtDXTQKqnwRyBFB/IlB/FZBfAfSpKygIGTwdLXgYGPRYfy93Vnk50yrgWr+VBAMK0GEBkf9X2tv+X2nV+X+FtRqI72xtKAiibe3s2FxcXVhcXV2ZGJSVlVG0/l5kaf1jvlnbj/mmE37MM6n4Ptck9+9C08rv80x7vs23iPkwz8blw1xLIZh6KUkpRmT9APF9cs4bmVUCAAAAAElFTkSuQmCC"
        style={
          Object {
            "height": "100%",
            "left": 0,
            "objectFit": "cover",
            "objectPosition": "center",
            "opacity": 1,
            "position": "absolute",
            "top": 0,
            "transitionDelay": "500ms",
            "width": "100%",
          }
        }
      />
      <picture>
        <source
          srcSet=""
        />
        <img
          alt="Amazon logo"
          height={30}
          loading="lazy"
          onLoad={[Function]}
          src=""
          srcSet=""
          style={
            Object {
              "height": "100%",
              "left": 0,
              "objectFit": "cover",
              "objectPosition": "center",
              "opacity": 0,
              "position": "absolute",
              "top": 0,
              "transition": "opacity 500ms",
              "width": "100%",
            }
          }
          width={93}
        />
      </picture>
      <noscript
        dangerouslySetInnerHTML={
          Object {
            "__html": "<picture><source srcset=\\"\\" /><img loading=\\"lazy\\" width=\\"93\\" height=\\"30\\" src=\\"\\" alt=\\"Amazon logo\\" style=\\"position:absolute;top:0;left:0;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/></picture>",
          }
        }
      />
    </div>
       Verified Purchase
  </div>
  <div
    style={
      Object {
        "borderBottom": "1px solid #CCC",
        "color": "#444",
        "fontSize": "1.1em",
        "fontWeight": "bold",
        "marginBottom": "5px",
      }
    }
  >
    A kind review
  </div>
  <div
    style={
      Object {
        "fontFamily": "lato, arial, sans-serif",
        "fontSize": "14px",
        "marginTop": "1em",
      }
    }
  >
    Some text describing what a great service we provided
  </div>
  <div>
    <center>
      <a
        className="productLink "
        href="default"
      >
        <div
          className="sc-AxiKw gtoKoy page-btn"
        >
          <div
            className="arrow-wrapper"
          >
            <span>
              Click me
            </span>
          </div>
        </div>
      </a>
    </center>
  </div>
</div>
`;

exports[`Storyshots Article Default 1`] = `
<div
  className="left-data-wrapper article"
>
  <div
    className="article-data-container"
  >
    <div
      className="title"
    >
      <h1>
        The title of the article
      </h1>
    </div>
  </div>
  <div
    className="article-creator-wrapper"
  >
    <div
      className="creator-data-wrapper"
    >
      <div
        className="creator-comment-wrapper body"
      >
        <div>
          this is the body content for the article
          <p>
            You can nest content in here
          </p>
          <p>
            This is an example of styled text
             
            <div
              className="styledText undefined"
              style={
                Object {
                  "color": "red",
                }
              }
            >
              <div
                style={
                  Object {
                    "backgroundColor": undefined,
                  }
                }
              >
                I'm styled text
              </div>
            </div>
          </p>
          <p>
            This is an example of inline styled text
             
            <span
              className="styledText undefined"
              style={
                Object {
                  "color": "red",
                }
              }
            >
              <div
                style={
                  Object {
                    "backgroundColor": undefined,
                  }
                }
              >
                I'm styled text
              </div>
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button Bonus Text 1`] = `
<a
  className="productLink "
  href="/"
>
  <div
    className="sc-AxiKw gtoKoy page-btn"
  >
    <div
      className="arrow-wrapper"
    >
      <p>
        Click me
      </p>
      <span>
        Bonus text
      </span>
    </div>
  </div>
</a>
`;

exports[`Storyshots Button Text 1`] = `
<a
  className="productLink "
  href="/"
>
  <div
    className="sc-AxiKw gtoKoy page-btn"
  >
    <div
      className="arrow-wrapper"
    >
      <span>
        Click me
      </span>
    </div>
  </div>
</a>
`;

exports[`Storyshots Facebook Review Default 1`] = `
<div
  className="facebook-container"
>
  <div
    className="review-head"
    style={
      Object {
        "alignItems": "flex-end",
        "borderBottom": "1px solid #CCC",
        "color": "#444",
        "display": "flex",
        "fontSize": "1.1em",
        "fontWeight": "bold",
        "justifyContent": "space-between",
        "marginBottom": "5px",
      }
    }
  >
    <div>
      <span>
        A kind review
      </span>
    </div>
    <div
      className="logo"
      style={
        Object {
          "height": 15,
          "marginBottom": "5px",
        }
      }
    >
      <a>
        <div
          className=" gatsby-image-wrapper"
          style={
            Object {
              "display": "inline-block",
              "height": 15,
              "overflow": "hidden",
              "position": "relative",
              "width": 73,
            }
          }
        >
          <img
            alt=""
            aria-hidden={true}
            src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABQAAAAECAYAAACOXx+WAAAACXBIWXMAAAsSAAALEgHS3X78AAAA8UlEQVQY03WPvUoEMRSFp/MBfAQfQEszybiw2AhaKkwyP4KytSJYWa+Ntbq5yUyhsCBaqPhTKKKVWCiKhbAv4+dab+Bwzz3ncJIkWRmNsjKq926nkgmHzDLoTfIX6mZOF6E/XlTun5X111ndrqROeosbJ9OplV1dxDVdxiWCBfo2uS/4ame9ncHvZ1WcNWUweDupC5vzuW9M1XaT1PpzEEzVVBT/EPi7QCjsUDKCv6E9MQO44TefKh8cM18ofiCDLq9438yrRDu/BfZZzsCHdnKPeWTK2CX8TtkBLztEG+KfUnKHPlBOLuEXY27l8b9Uhr9uY3UFr+e/9wAAAABJRU5ErkJggg=="
            style={
              Object {
                "height": "100%",
                "left": 0,
                "objectFit": "cover",
                "objectPosition": "center",
                "opacity": 1,
                "position": "absolute",
                "top": 0,
                "transitionDelay": "500ms",
                "width": "100%",
              }
            }
          />
          <picture>
            <source
              srcSet="/static/d1010c6ec089cff141523eb269214ad5/83af0/fb.webp 1x"
              type="image/webp"
            />
            <source
              srcSet="/static/d1010c6ec089cff141523eb269214ad5/fa4ca/fb.png 1x"
            />
            <img
              alt="logo"
              height={15}
              loading="lazy"
              onLoad={[Function]}
              src="/static/d1010c6ec089cff141523eb269214ad5/fa4ca/fb.png"
              srcSet="/static/d1010c6ec089cff141523eb269214ad5/fa4ca/fb.png 1x"
              style={
                Object {
                  "height": "100%",
                  "left": 0,
                  "objectFit": "cover",
                  "objectPosition": "center",
                  "opacity": 0,
                  "position": "absolute",
                  "top": 0,
                  "transition": "opacity 500ms",
                  "width": "100%",
                }
              }
              width={73}
            />
          </picture>
          <noscript
            dangerouslySetInnerHTML={
              Object {
                "__html": "<picture><source type='image/webp' srcset=\\"/static/d1010c6ec089cff141523eb269214ad5/83af0/fb.webp 1x\\" /><source srcset=\\"/static/d1010c6ec089cff141523eb269214ad5/fa4ca/fb.png 1x\\" /><img loading=\\"lazy\\" width=\\"73\\" height=\\"15\\" srcset=\\"/static/d1010c6ec089cff141523eb269214ad5/fa4ca/fb.png 1x\\" src=\\"/static/d1010c6ec089cff141523eb269214ad5/fa4ca/fb.png\\" alt=\\"logo\\" style=\\"position:absolute;top:0;left:0;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/></picture>",
              }
            }
          />
        </div>
      </a>
    </div>
  </div>
  <div
    style={
      Object {
        "fontFamily": "lato, arial, sans-serif",
        "fontSize": "14px",
        "marginTop": "1em",
      }
    }
  >
    Some text describing what a great service we provided
  </div>
</div>
`;

exports[`Storyshots Facebook Review Type D 1`] = `
<div
  className="facebook-container"
>
  <div
    className="review-head"
    style={
      Object {
        "borderBottom": "1px solid #CCC",
        "color": "#444",
        "display": "flex",
        "flexDirection": "column",
        "fontSize": "1.1em",
        "fontWeight": "bold",
        "justifyContent": "space-between",
        "marginBottom": "5px",
      }
    }
  >
    <div />
    <div
      className="logo"
      style={
        Object {
          "alignSelf": "flex-start",
          "height": 15,
        }
      }
    >
      <div
        className=" gatsby-image-wrapper"
        style={
          Object {
            "display": "inline-block",
            "height": 15,
            "overflow": "hidden",
            "position": "relative",
            "width": 73,
          }
        }
      >
        <img
          alt=""
          aria-hidden={true}
          src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABQAAAAECAYAAACOXx+WAAAACXBIWXMAAAsSAAALEgHS3X78AAAA8UlEQVQY03WPvUoEMRSFp/MBfAQfQEszybiw2AhaKkwyP4KytSJYWa+Ntbq5yUyhsCBaqPhTKKKVWCiKhbAv4+dab+Bwzz3ncJIkWRmNsjKq926nkgmHzDLoTfIX6mZOF6E/XlTun5X111ndrqROeosbJ9OplV1dxDVdxiWCBfo2uS/4ame9ncHvZ1WcNWUweDupC5vzuW9M1XaT1PpzEEzVVBT/EPi7QCjsUDKCv6E9MQO44TefKh8cM18ofiCDLq9438yrRDu/BfZZzsCHdnKPeWTK2CX8TtkBLztEG+KfUnKHPlBOLuEXY27l8b9Uhr9uY3UFr+e/9wAAAABJRU5ErkJggg=="
          style={
            Object {
              "height": "100%",
              "left": 0,
              "objectFit": "cover",
              "objectPosition": "center",
              "opacity": 1,
              "position": "absolute",
              "top": 0,
              "transitionDelay": "500ms",
              "width": "100%",
            }
          }
        />
        <picture>
          <source
            srcSet="/static/d1010c6ec089cff141523eb269214ad5/83af0/fb.webp 1x"
            type="image/webp"
          />
          <source
            srcSet="/static/d1010c6ec089cff141523eb269214ad5/fa4ca/fb.png 1x"
          />
          <img
            alt="logo"
            height={15}
            loading="lazy"
            onLoad={[Function]}
            src="/static/d1010c6ec089cff141523eb269214ad5/fa4ca/fb.png"
            srcSet="/static/d1010c6ec089cff141523eb269214ad5/fa4ca/fb.png 1x"
            style={
              Object {
                "height": "100%",
                "left": 0,
                "objectFit": "cover",
                "objectPosition": "center",
                "opacity": 0,
                "position": "absolute",
                "top": 0,
                "transition": "opacity 500ms",
                "width": "100%",
              }
            }
            width={73}
          />
        </picture>
        <noscript
          dangerouslySetInnerHTML={
            Object {
              "__html": "<picture><source type='image/webp' srcset=\\"/static/d1010c6ec089cff141523eb269214ad5/83af0/fb.webp 1x\\" /><source srcset=\\"/static/d1010c6ec089cff141523eb269214ad5/fa4ca/fb.png 1x\\" /><img loading=\\"lazy\\" width=\\"73\\" height=\\"15\\" srcset=\\"/static/d1010c6ec089cff141523eb269214ad5/fa4ca/fb.png 1x\\" src=\\"/static/d1010c6ec089cff141523eb269214ad5/fa4ca/fb.png\\" alt=\\"logo\\" style=\\"position:absolute;top:0;left:0;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/></picture>",
            }
          }
        />
      </div>
    </div>
    <span>
      A kind review
    </span>
  </div>
  <div
    style={
      Object {
        "fontFamily": "lato, arial, sans-serif",
        "fontSize": "14px",
        "marginTop": "1em",
      }
    }
  >
    Some text describing what a great service we provided
  </div>
  <div
    className="page-btn-container"
  />
</div>
`;

exports[`Storyshots Facebook Review Type D With Action 1`] = `
<div
  className="facebook-container"
>
  <div
    className="review-head"
    style={
      Object {
        "borderBottom": "1px solid #CCC",
        "color": "#444",
        "display": "flex",
        "flexDirection": "column",
        "fontSize": "1.1em",
        "fontWeight": "bold",
        "justifyContent": "space-between",
        "marginBottom": "5px",
      }
    }
  >
    <div />
    <div
      className="logo"
      style={
        Object {
          "alignSelf": "flex-start",
          "height": 15,
        }
      }
    >
      <div
        className=" gatsby-image-wrapper"
        style={
          Object {
            "display": "inline-block",
            "height": 15,
            "overflow": "hidden",
            "position": "relative",
            "width": 73,
          }
        }
      >
        <img
          alt=""
          aria-hidden={true}
          src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABQAAAAECAYAAACOXx+WAAAACXBIWXMAAAsSAAALEgHS3X78AAAA8UlEQVQY03WPvUoEMRSFp/MBfAQfQEszybiw2AhaKkwyP4KytSJYWa+Ntbq5yUyhsCBaqPhTKKKVWCiKhbAv4+dab+Bwzz3ncJIkWRmNsjKq926nkgmHzDLoTfIX6mZOF6E/XlTun5X111ndrqROeosbJ9OplV1dxDVdxiWCBfo2uS/4ame9ncHvZ1WcNWUweDupC5vzuW9M1XaT1PpzEEzVVBT/EPi7QCjsUDKCv6E9MQO44TefKh8cM18ofiCDLq9438yrRDu/BfZZzsCHdnKPeWTK2CX8TtkBLztEG+KfUnKHPlBOLuEXY27l8b9Uhr9uY3UFr+e/9wAAAABJRU5ErkJggg=="
          style={
            Object {
              "height": "100%",
              "left": 0,
              "objectFit": "cover",
              "objectPosition": "center",
              "opacity": 1,
              "position": "absolute",
              "top": 0,
              "transitionDelay": "500ms",
              "width": "100%",
            }
          }
        />
        <picture>
          <source
            srcSet="/static/d1010c6ec089cff141523eb269214ad5/83af0/fb.webp 1x"
            type="image/webp"
          />
          <source
            srcSet="/static/d1010c6ec089cff141523eb269214ad5/fa4ca/fb.png 1x"
          />
          <img
            alt="logo"
            height={15}
            loading="lazy"
            onLoad={[Function]}
            src="/static/d1010c6ec089cff141523eb269214ad5/fa4ca/fb.png"
            srcSet="/static/d1010c6ec089cff141523eb269214ad5/fa4ca/fb.png 1x"
            style={
              Object {
                "height": "100%",
                "left": 0,
                "objectFit": "cover",
                "objectPosition": "center",
                "opacity": 0,
                "position": "absolute",
                "top": 0,
                "transition": "opacity 500ms",
                "width": "100%",
              }
            }
            width={73}
          />
        </picture>
        <noscript
          dangerouslySetInnerHTML={
            Object {
              "__html": "<picture><source type='image/webp' srcset=\\"/static/d1010c6ec089cff141523eb269214ad5/83af0/fb.webp 1x\\" /><source srcset=\\"/static/d1010c6ec089cff141523eb269214ad5/fa4ca/fb.png 1x\\" /><img loading=\\"lazy\\" width=\\"73\\" height=\\"15\\" srcset=\\"/static/d1010c6ec089cff141523eb269214ad5/fa4ca/fb.png 1x\\" src=\\"/static/d1010c6ec089cff141523eb269214ad5/fa4ca/fb.png\\" alt=\\"logo\\" style=\\"position:absolute;top:0;left:0;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/></picture>",
            }
          }
        />
      </div>
    </div>
    <span>
      A kind review
    </span>
  </div>
  <div
    style={
      Object {
        "fontFamily": "lato, arial, sans-serif",
        "fontSize": "14px",
        "marginTop": "1em",
      }
    }
  >
    Some text describing what a great service we provided
  </div>
  <div
    className="page-btn-container"
  >
    <a
      className="productLink "
      href="default"
    >
      <div
        className="sc-AxiKw gtoKoy page-btn"
      >
        <div
          className="arrow-wrapper"
        >
          <span>
            Click me
          </span>
        </div>
      </div>
    </a>
  </div>
</div>
`;

exports[`Storyshots Facebook Review With Action 1`] = `
<div
  className="facebook-container"
>
  <div
    className="review-head"
    style={
      Object {
        "alignItems": "flex-end",
        "borderBottom": "1px solid #CCC",
        "color": "#444",
        "display": "flex",
        "fontSize": "1.1em",
        "fontWeight": "bold",
        "justifyContent": "space-between",
        "marginBottom": "5px",
      }
    }
  >
    <div>
      <span>
        A kind review
      </span>
    </div>
    <div
      className="logo"
      style={
        Object {
          "height": 15,
          "marginBottom": "5px",
        }
      }
    >
      <a>
        <div
          className=" gatsby-image-wrapper"
          style={
            Object {
              "display": "inline-block",
              "height": 15,
              "overflow": "hidden",
              "position": "relative",
              "width": 73,
            }
          }
        >
          <img
            alt=""
            aria-hidden={true}
            src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABQAAAAECAYAAACOXx+WAAAACXBIWXMAAAsSAAALEgHS3X78AAAA8UlEQVQY03WPvUoEMRSFp/MBfAQfQEszybiw2AhaKkwyP4KytSJYWa+Ntbq5yUyhsCBaqPhTKKKVWCiKhbAv4+dab+Bwzz3ncJIkWRmNsjKq926nkgmHzDLoTfIX6mZOF6E/XlTun5X111ndrqROeosbJ9OplV1dxDVdxiWCBfo2uS/4ame9ncHvZ1WcNWUweDupC5vzuW9M1XaT1PpzEEzVVBT/EPi7QCjsUDKCv6E9MQO44TefKh8cM18ofiCDLq9438yrRDu/BfZZzsCHdnKPeWTK2CX8TtkBLztEG+KfUnKHPlBOLuEXY27l8b9Uhr9uY3UFr+e/9wAAAABJRU5ErkJggg=="
            style={
              Object {
                "height": "100%",
                "left": 0,
                "objectFit": "cover",
                "objectPosition": "center",
                "opacity": 1,
                "position": "absolute",
                "top": 0,
                "transitionDelay": "500ms",
                "width": "100%",
              }
            }
          />
          <picture>
            <source
              srcSet="/static/d1010c6ec089cff141523eb269214ad5/83af0/fb.webp 1x"
              type="image/webp"
            />
            <source
              srcSet="/static/d1010c6ec089cff141523eb269214ad5/fa4ca/fb.png 1x"
            />
            <img
              alt="logo"
              height={15}
              loading="lazy"
              onLoad={[Function]}
              src="/static/d1010c6ec089cff141523eb269214ad5/fa4ca/fb.png"
              srcSet="/static/d1010c6ec089cff141523eb269214ad5/fa4ca/fb.png 1x"
              style={
                Object {
                  "height": "100%",
                  "left": 0,
                  "objectFit": "cover",
                  "objectPosition": "center",
                  "opacity": 0,
                  "position": "absolute",
                  "top": 0,
                  "transition": "opacity 500ms",
                  "width": "100%",
                }
              }
              width={73}
            />
          </picture>
          <noscript
            dangerouslySetInnerHTML={
              Object {
                "__html": "<picture><source type='image/webp' srcset=\\"/static/d1010c6ec089cff141523eb269214ad5/83af0/fb.webp 1x\\" /><source srcset=\\"/static/d1010c6ec089cff141523eb269214ad5/fa4ca/fb.png 1x\\" /><img loading=\\"lazy\\" width=\\"73\\" height=\\"15\\" srcset=\\"/static/d1010c6ec089cff141523eb269214ad5/fa4ca/fb.png 1x\\" src=\\"/static/d1010c6ec089cff141523eb269214ad5/fa4ca/fb.png\\" alt=\\"logo\\" style=\\"position:absolute;top:0;left:0;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/></picture>",
              }
            }
          />
        </div>
      </a>
    </div>
  </div>
  <div
    style={
      Object {
        "fontFamily": "lato, arial, sans-serif",
        "fontSize": "14px",
        "marginTop": "1em",
      }
    }
  >
    Some text describing what a great service we provided
  </div>
  <a
    className="productLink "
    href="default"
  >
    <div
      className="sc-AxiKw gtoKoy page-btn"
    >
      <div
        className="arrow-wrapper"
      >
        <span>
          Click me
        </span>
      </div>
    </div>
  </a>
</div>
`;

exports[`Storyshots Footer Default 1`] = `
<footer
  className="site-footer-container"
>
  <div
    className="site-footer-wrapper"
  >
    <div
      className="copyrights"
    >
      <p>
        Copyright © 
        2020
         
        <a
          href="/"
        >
          Dado
        </a>
      </p>
    </div>
    <div
      className="footer-nav"
    >
      <a
        href="/"
      >
        Link to somewhere
      </a>
      <a
        href="/"
      >
        Link to nowhere
      </a>
    </div>
    <div
      className="footer-msg"
    >
      <div>
        This is arbitrary content
        <p>
          that can be nested
        </p>
      </div>
    </div>
  </div>
</footer>
`;

exports[`Storyshots Header Default 1`] = `
<section
  className="site-logo-container header"
>
  <div
    className="sc-AxjAm gPHMU section site-logo-wrapper"
  >
    <div
      className="site-logo"
    >
      <div
        className=" gatsby-image-wrapper"
        style={
          Object {
            "display": "inline-block",
            "height": 38,
            "overflow": "hidden",
            "position": "relative",
            "width": 170,
          }
        }
      >
        <img
          alt=""
          aria-hidden={true}
          src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABQAAAAECAYAAACOXx+WAAAACXBIWXMAABcRAAAXEQHKJvM/AAAAjUlEQVQY05WOQQoCMQxFW0VwIYpQFMZZtAgjLnQhuG1P0Nz/OL7fKYKICwOPpMnPb1ws5v6J9EP/0ecRYMR8JK/hkHLdx2xbWKZsR9jQvzZ9bprQtNkGCL3/NpxggAfs4MxQ5hfyivyEE9S+GGDq2jvcOMB/nasfVDOcKbZIpbo4116oVujyvutlJp3iBXwXJpWT4bHDAAAAAElFTkSuQmCC"
          style={
            Object {
              "height": "100%",
              "left": 0,
              "objectFit": "cover",
              "objectPosition": "center",
              "opacity": 1,
              "position": "absolute",
              "top": 0,
              "transitionDelay": "500ms",
              "width": "100%",
            }
          }
        />
        <img
          alt=""
          aria-hidden={true}
          src="data:image/svg+xml,%3csvg%20xmlns='http://www.w3.org/2000/svg'%20width='400'%20height='89'%20viewBox='0%200%20400%2089'%20preserveAspectRatio='none'%3e%3cpath%20d='M37%2031l-1%2014c0%2013%200%2014%202%2014s2-1%202-14c0-14%200-15%205-14%204%201%206%206%204%2011%200%203-1%204-4%204l-3%201h3c9%200%2012-12%204-16H37m35%2014v14h9l8-1H76V44h10l-5-1h-5V31l6%201%206-1-8-1h-8v15m34-14l3%201%203-1v21c0%207%200%207%202%207s2-1%202-14l1-13h3l3-1-8-1-9%201m36%2014v14h8l8-1h-12V44c0-13%200-14-2-14s-2%201-2%2015m43-14l-11%2028%203-7%203-5h9l2%206c2%205%203%206%205%206%203%200%203%202-4-15-6-15-5-14-7-13m32-1v15l1%2014c2%200%202-2%202-14l1-13%202-1c7-1%208%209%202%2012l-3%201h3c6%200%209%2010%204%2013l-2%202h2c3%200%206-3%206-7s-3-8-5-8l1-2c5-6%201-12-8-12h-6m70%202c-10%206-8%2024%204%2027%204%201%2011%200%2012-1h-3c-9%202-15-3-15-14%200-6%202-10%205-12%203-1%208-1%2011%201h2c2-3-11-4-16-1m40%200c-4%203-6%207-6%2014%202%2019%2028%2018%2028-1%200-12-12-19-22-13m3%200c-4%202-6%2014-3%2021%204%209%2016%207%2018-4%201-13-6-21-15-17'%20fill='%23d3d3d3'%20fill-rule='evenodd'/%3e%3c/svg%3e"
          style={
            Object {
              "height": "100%",
              "left": 0,
              "objectFit": "cover",
              "objectPosition": "center",
              "opacity": 1,
              "position": "absolute",
              "top": 0,
              "transitionDelay": "500ms",
              "width": "100%",
            }
          }
        />
        <picture>
          <source
            srcSet=""
          />
          <img
            alt="Logo"
            height={38}
            loading="lazy"
            onLoad={[Function]}
            src="test-image-stub"
            srcSet=""
            style={
              Object {
                "height": "100%",
                "left": 0,
                "objectFit": "cover",
                "objectPosition": "center",
                "opacity": 0,
                "position": "absolute",
                "top": 0,
                "transition": "opacity 500ms",
                "width": "100%",
              }
            }
            width={170}
          />
        </picture>
        <noscript
          dangerouslySetInnerHTML={
            Object {
              "__html": "<picture><source srcset=\\"\\" /><img loading=\\"lazy\\" width=\\"170\\" height=\\"38\\" src=\\"test-image-stub\\" alt=\\"Logo\\" style=\\"position:absolute;top:0;left:0;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/></picture>",
            }
          }
        />
      </div>
    </div>
    <div
      className="sc-AxirZ lgbZhd"
    >
      <div>
        Advertorial
      </div>
    </div>
  </div>
</section>
`;

exports[`Storyshots Image Caption 1`] = `
<div
  className="article-img-wrapper"
>
  <img
    alt="a placeholder"
    src="https://via.placeholder.com/150"
    style={
      Object {
        "width": undefined,
      }
    }
  />
  <div
    style={
      Object {
        "fontWeight": 700,
        "margin": 0,
        "padding": 0,
        "width": "auto",
      }
    }
  >
    <div>
      An Image Caption
    </div>
  </div>
</div>
`;

exports[`Storyshots Image Default 1`] = `
<div
  className="article-img-wrapper"
>
  <img
    alt="a placeholder"
    src="https://via.placeholder.com/150"
    style={
      Object {
        "width": undefined,
      }
    }
  />
</div>
`;

exports[`Storyshots Image Fixed 1`] = `
<div
  className="article-img-wrapper"
>
  <div
    className=" gatsby-image-wrapper"
    style={
      Object {
        "display": "inline-block",
        "height": 150,
        "overflow": "hidden",
        "position": "relative",
        "width": 150,
      }
    }
  >
    <picture>
      <source
        srcSet=""
      />
      <img
        alt=""
        height={150}
        loading="lazy"
        onLoad={[Function]}
        src="test-image-stub"
        srcSet=""
        style={
          Object {
            "height": "100%",
            "left": 0,
            "objectFit": "cover",
            "objectPosition": "center",
            "opacity": 0,
            "position": "absolute",
            "top": 0,
            "transition": "opacity 500ms",
            "width": "100%",
          }
        }
        width={150}
      />
    </picture>
    <noscript
      dangerouslySetInnerHTML={
        Object {
          "__html": "<picture><source srcset=\\"\\" /><img loading=\\"lazy\\" width=\\"150\\" height=\\"150\\" src=\\"test-image-stub\\" alt=\\"\\" style=\\"position:absolute;top:0;left:0;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/></picture>",
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots Image Max Width 1`] = `
<div
  className="article-img-wrapper"
>
  <img
    alt="a placeholder"
    src="https://via.placeholder.com/150"
    style={
      Object {
        "width": 100,
      }
    }
  />
</div>
`;

exports[`Storyshots Layout Default 1`] = `
<div>
  <section
    className="site-logo-container header"
  >
    <div
      className="sc-AxjAm gPHMU section site-logo-wrapper"
    >
      <div
        className="site-logo"
      >
        <div
          className=" gatsby-image-wrapper"
          style={
            Object {
              "display": "inline-block",
              "height": 150,
              "overflow": "hidden",
              "position": "relative",
              "width": 150,
            }
          }
        >
          <picture>
            <source
              srcSet=""
            />
            <img
              alt="Logo"
              height={150}
              loading="lazy"
              onLoad={[Function]}
              src="test-image-stub"
              srcSet=""
              style={
                Object {
                  "height": "100%",
                  "left": 0,
                  "objectFit": "cover",
                  "objectPosition": "center",
                  "opacity": 0,
                  "position": "absolute",
                  "top": 0,
                  "transition": "opacity 500ms",
                  "width": "100%",
                }
              }
              width={150}
            />
          </picture>
          <noscript
            dangerouslySetInnerHTML={
              Object {
                "__html": "<picture><source srcset=\\"\\" /><img loading=\\"lazy\\" width=\\"150\\" height=\\"150\\" src=\\"test-image-stub\\" alt=\\"Logo\\" style=\\"position:absolute;top:0;left:0;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/></picture>",
              }
            }
          />
        </div>
      </div>
      <div
        className="sc-AxirZ lgbZhd"
      >
        <div>
          Advertorial
        </div>
      </div>
      <div
        className="extra"
      >
        <div>
          extra content
        </div>
      </div>
    </div>
  </section>
  <section
    className="site-data-container"
  >
    <div
      className="site-data-wrapper section"
    >
      <div>
        the content
      </div>
    </div>
  </section>
  <footer
    className="site-footer-container"
  >
    <div
      className="site-footer-wrapper"
    >
      <div
        className="copyrights"
      >
        <p>
          Copyright © 
          2020
           
          <a
            href="/"
          >
            Dado
          </a>
        </p>
      </div>
      <div
        className="footer-nav"
      >
        <a
          href="/"
        >
          Link to somewhere
        </a>
        <a
          href="/"
        >
          Link to nowhere
        </a>
      </div>
      <div
        className="footer-msg"
      >
        <div>
          This is arbitrary content
          <p>
            that can be nested
          </p>
        </div>
      </div>
    </div>
  </footer>
</div>
`;

exports[`Storyshots Product Card Default 1`] = `
<div
  className="meta-info product-card "
>
  <center>
    <div
      className="article-img-wrapper"
    >
      <img
        alt="header"
        src="https://via.placeholder.com/150"
        style={
          Object {
            "width": undefined,
          }
        }
      />
    </div>
  </center>
  <div
    className="figure caption"
    style={
      Object {
        "marginTop": 0,
      }
    }
  >
    <div>
      <b>
        This
      </b>
       is a sub heading
    </div>
  </div>
  <a
    className="productLink "
    href="default"
  >
    <div
      className="sc-AxiKw gtoKoy page-btn"
    >
      <div
        className="arrow-wrapper"
      >
        <span>
          Click me
        </span>
      </div>
    </div>
  </a>
</div>
`;

exports[`Storyshots Styled Text Background Color 1`] = `
<div
  className="styledText undefined"
  style={
    Object {
      "color": undefined,
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": "red",
      }
    }
  >
    I'm styled text
  </div>
</div>
`;

exports[`Storyshots Styled Text Centered 1`] = `
<div
  className="styledText undefined"
  style={
    Object {
      "color": undefined,
      "textAlign": "center",
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": undefined,
      }
    }
  >
    I'm styled text
  </div>
</div>
`;

exports[`Storyshots Styled Text Color And Background Color 1`] = `
<div
  className="styledText undefined"
  style={
    Object {
      "color": "white",
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": "red",
      }
    }
  >
    I'm styled text
  </div>
</div>
`;

exports[`Storyshots Styled Text Colored 1`] = `
<div
  className="styledText undefined"
  style={
    Object {
      "color": "red",
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": undefined,
      }
    }
  >
    I'm styled text
  </div>
</div>
`;

exports[`Storyshots Styled Text Default 1`] = `
<div
  className="styledText undefined"
  style={
    Object {
      "color": undefined,
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": undefined,
      }
    }
  >
    I'm styled text
  </div>
</div>
`;

exports[`Storyshots Styled Text Inline 1`] = `
<span
  className="styledText undefined"
  style={
    Object {
      "color": undefined,
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": undefined,
      }
    }
  >
    I'm styled text
  </div>
</span>
`;

exports[`Storyshots Styled Text Inline Background 1`] = `
<span
  className="styledText undefined"
  style={
    Object {
      "color": undefined,
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": "red",
      }
    }
  >
    I'm styled text
  </div>
</span>
`;

exports[`Storyshots Styled Text Inline Background And Color 1`] = `
<span
  className="styledText undefined"
  style={
    Object {
      "color": "white",
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": "red",
      }
    }
  >
    I'm styled text
  </div>
</span>
`;

exports[`Storyshots Styled Text Inline Colored 1`] = `
<span
  className="styledText undefined"
  style={
    Object {
      "color": "red",
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": undefined,
      }
    }
  >
    I'm styled text
  </div>
</span>
`;
